# vitaliy_avdoshkin_CourseWork_6

./: READMY.md  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  models.py  urls.py  views.py
mailing/templates/mailing/: contacts.html
users/management/commands/: csu.py
